welcome.lessons.welcome.array.has271.Has271.scala.error
has271:7: error: ';' expected but ')' found.
		if ((nums(i + 1) == nums(i) + 5) && ((nums(i + 2) == nums(i) - 1) || nums(i + 2) == nums(i) - 2) || nums(i + 2) == nums(i) - 3) || nums(i + 2) == nums(i)) || nums(i + 2) == nums(i) + 1))) bool = true;
                                                                                                                                                                         ^